--- a/Grains/Grains.csproj
+++ b/Grains/Grains.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0-preview.6.24327.7"/>
+        <PackageReference Include="Microsoft.Orleans.Runtime" Version="8.2.0" />
         <PackageReference Include="Microsoft.Orleans.Sdk" Version="8.2.0"/>
     </ItemGroup>
 
